namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    tier: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: db-ns
  labels:
    tier: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: job-ns
  labels:
    tier: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: member-ns
  labels:
    tier: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: apply-ns
  labels:
    tier: backend
